Changed where the agent-less actions go in the swimlane (Used to be very right lane now it's ~middle) Moved fullscreen buttons into one. User now gets a choice of what graph they want to see in full screen Added buttons into the fullscreen modal to swap between flow and swimlan graphs Changed the border style of nodes that are shared by multiple agents (used to be solid, now dashed) Changed colour of nodes shared by multiple agents (Now gray) Changed the shape of the arrows in iterations. They are now somewhat curved. Prevents problem where they used to be drawn behind nodes.

--- a/app/static/css/editor.css
+++ b/app/static/css/editor.css
@@ -1,9 +1,17 @@
+.btn:focus,.btn:active:focus,.btn.active:focus,
+.btn.focus,.btn:active.focus,.btn.active.focus {
+    outline: none;
+}
+.btn-primary-pill,.btn-primary-pill:hover{
+	border-color: transparent
+}
+
 #ruler {
 	visibility: hidden;
 	white-space: nowrap;
 }
 #editor {
-	height: 400px;
+	height: 500px;
 	border-style: solid;
 	border-width: 1px;
 	border-color: #A8A8A8;
@@ -71,7 +79,7 @@ display:inline-block;
 }
 
 .graphics{
-	height: 400px;
+	height: 500px;
 	border-style: solid;
 	border-width: 1px;
 	border-color: #A8A8A8;
@@ -84,6 +92,6 @@ body .graphics_fullscreen{
 	border-color: #A8A8A8;
 }
 
-.modal-dialog{
-	width: 80%;
+.modal-dialog-fs{
+	width: 100%;
 }
